<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ViewChangeSystemInformationFragment">

    <Switch
        android:id="@+id/cond_switch"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:checked="true"
        android:text="@string/condition_system_on_off"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/light_switch"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/lighting_on_of"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintBottom_toTopOf="@+id/irrigation_switch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cond_switch"
        tools:ignore="MissingConstraints" />

    <Switch
        android:id="@+id/irrigation_switch"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginBottom="250dp"
        android:checked="true"
        android:text="@string/irrigation_system_on_off"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>