<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ViewGreenHouseFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/greenhouse_inf_but"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="200dp"
        android:gravity="center_vertical"
        android:text="@string/greenhouse_information"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlCompat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/change_sys_params_but"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:gravity="center_vertical"
        android:text="@string/change_system_parameters"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/system_inf_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greenhouse_inf_but"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="RtlCompat" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/system_inf_but"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginBottom="200dp"
        android:gravity="center_vertical"
        android:text="@string/turn_on_of"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="RtlCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>